--- a/gb/24/6/11/n14268208.md
+++ b/gb/24/6/11/n14268208.md
@@ -7,14 +7,14 @@
 </h6>
 <hr>
 	<p>【大纪元2024年06月11日讯】（大纪元记者徐曼沅洛杉矶报导）加州第38区国会众议员候选人秦振国（Eric Ching）于华人聚居的罗兰岗（Rowland Heights）举办募款晚宴，近两百位不同族裔的支持者参与，并一同高呼：“冻蒜（当选）。”</p>
-<figure id="attachment_14268213" aria-describedby="caption-attachment-14268213" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14268213-1b2c47c2d87f55e9881aa00b6cbd97c8.jpg"><img class="size-large wp-image-14268213" src="https://i.epochtimes.com/assets/uploads/2024/06/id14268213-1b2c47c2d87f55e9881aa00b6cbd97c8-600x348.jpg" alt="" width="600" b="348" /></a><figcaption id="caption-attachment-14268213" class="wp-caption-text">2024年6月9日，秦振国（右三）与支持者合影。（徐曼沅／大纪元）</figcaption></figure>
-<figure id="attachment_14268215" aria-describedby="caption-attachment-14268215" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14268215-f9ad14079202888015fabfa7ce5642be.jpg"><img class="size-large wp-image-14268215" src="https://i.epochtimes.com/assets/uploads/2024/06/id14268215-f9ad14079202888015fabfa7ce5642be-600x338.jpg" alt="" width="600" b="338" /></a><figcaption id="caption-attachment-14268215" class="wp-caption-text">2024年6月9日，秦振国（后排右二）与支持他的选民合影。（徐曼沅／大纪元）</figcaption></figure>
-<p>秦振国认为，政府主要的职能就是“服务”和“保护”人民，所以他以安全、经济和教育“ S.E.E”（Safety, Economy, Education）为竞选理念，希望解决加州日益恶化的治安问题，并敦促政府对经济和教育投入更多关注。</p>
+<figure id="attachment_14268213" aria-describedby="caption-attachment-14268213" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14268213-1b2c47c2d87f55e9881aa00b6cbd97c8.jpg"><img decoding="async" class="size-large wp-image-14268213" src="https://i.epochtimes.com/assets/uploads/2024/06/id14268213-1b2c47c2d87f55e9881aa00b6cbd97c8-600x348.jpg" alt="" width="600" b="348" /></a><figcaption id="caption-attachment-14268213" class="wp-caption-text">2024年6月9日，秦振国（右三）与支持者合影。（徐曼沅／大纪元）</figcaption></figure>
+<figure id="attachment_14268215" aria-describedby="caption-attachment-14268215" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14268215-f9ad14079202888015fabfa7ce5642be.jpg"><img decoding="async" class="size-large wp-image-14268215" src="https://i.epochtimes.com/assets/uploads/2024/06/id14268215-f9ad14079202888015fabfa7ce5642be-600x338.jpg" alt="" width="600" b="338" /></a><figcaption id="caption-attachment-14268215" class="wp-caption-text">2024年6月9日，秦振国（后排右二）与支持他的选民合影。（徐曼沅／大纪元）</figcaption></figure>
+<p>秦振国认为，政府主要的职能就是“服务”和“保护”人民，所以他以安全、经济和教育“ S.E.E”（Safety, Economy, Education）为竞选理念，希望解决加州日益恶化的治安问题，并敦促政府对经济和教育投入更多关注，并且提供更多警力资源。</p>
 <p>已在加州政界服务12年的秦振国，在任职核桃市市议员期间推动了道路建设、降低犯罪率，核桃市的储蓄基金超过200%。他希望将自己这些地方经验带到国会，用“说故事”的方式让立法者了解民众真正的需要。</p>
 <p>秦振国举例，例如允许儿童变性、支持堕胎等议题，需要让国会了解普通家庭和父母们的心声，他说：“政府应照顾经济、重视教育，而不是去推行一些离一般居民太远的议题。”</p>
 <p>除了获华裔民众支持，秦振国表示他的竞选团队有超过50名以上的西语裔牧师参加，他说：“在以前，我想像不到，我们还有白人、黑人的团队。”因为当秦振国的支持者与基层民众交流、沟通后，对方不仅很感兴趣，甚至主动招募了更多人加入。</p>
 <p>秦振国说：“不管是哪个族裔，我们的理念和每个家庭都是非常、非常接近的，我们都希望社区安全，希望经济好，小孩在学校也能够学好。”所以他与团队将更加努力，坚定信念，维护所有家庭认同的普世理念。</p>
-<figure id="attachment_14268211" aria-describedby="caption-attachment-14268211" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14268211-6049f9064ac245f5e4ce001692a4e2c3.jpg"><img class="size-large wp-image-14268211" src="https://i.epochtimes.com/assets/uploads/2024/06/id14268211-6049f9064ac245f5e4ce001692a4e2c3-600x375.jpg" alt="" width="600" b="375" /></a><figcaption id="caption-attachment-14268211" class="wp-caption-text">2024年6月9日，前美国白宫总统亚太顾问委员会主席徐绍钦出席募款晚宴，以行动支持秦振国。（徐曼沅／大纪元）</figcaption></figure>
+<figure id="attachment_14268211" aria-describedby="caption-attachment-14268211" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14268211-6049f9064ac245f5e4ce001692a4e2c3.jpg"><img decoding="async" class="size-large wp-image-14268211" src="https://i.epochtimes.com/assets/uploads/2024/06/id14268211-6049f9064ac245f5e4ce001692a4e2c3-600x375.jpg" alt="" width="600" b="375" /></a><figcaption id="caption-attachment-14268211" class="wp-caption-text">2024年6月9日，前美国白宫总统亚太顾问委员会主席徐绍钦出席募款晚宴，以行动支持秦振国。（徐曼沅／大纪元）</figcaption></figure>
 <p>前美国白宫总统亚太顾问委员会主席徐绍钦认为，亚裔在美国政界一向是少数，影响力严重不足，所以须将秦振国这类的候选人送进国会，他的“科技人”和“企业家”背景，有助于领导社会走回正轨。</p>
 <p>徐绍钦强调，亚裔一定要发声，因为没有声音，政府就不会重视你。他也鼓励秦振国积极与美国主流社会接轨，让所有族裔的选民都听到、看见他的理念，让家庭、社会更好。◇</p>
 <p>责任编辑：方平</p>
@@ -26,29 +26,28 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/3/11/n14200181.md#1">秦振国晋级国会议员决选：人心思变 大有胜算</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/20/2/20/n11884306.md#1">退出无神论组织 做个神佛保佑的人</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/6/16/n8005208.md#1" target="_blank">美肿瘤学会收录法轮功延长癌患生命论文</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/8/n11241790.md#1" target="_blank">共产暴政录：柬共屠杀300万民众及30万华人</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/15/10/21/n4555059.md#1" target="_blank">94岁老人：没有法轮功我早就不在人世了</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14265705.md#1">【未解之谜】阿南德最新预言：相同天象再现 人间将有异动</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14262775.md#1">【未解之谜】他看到天机：“七星连芒”东方大城历劫</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/26/n14167203.md#1">药学博士：自幼伴随我的鼻敏感和哮喘消失了</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14263533.md#1">研究过上千例濒死体验 美前牧师谈死后世界</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/8/n14266607.md#1">端午节吃粽子起源不因纪念屈原？一起来揭谜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/8/n14266420.md#1">【人物真相】低调神秘 刘志强为何退休后落马？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/23/n14232446.md#1">【古韵流芳】袁枚首席女弟子——席佩兰</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267756.md#1">弘扬武德 2024新唐人武术大赛初赛德国登场</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/23/n14256443.md#1">拥有F-35战机最多的十个国家 第二名出人意料</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/2/n14262687.md#1">六款商品在Costco价格不菲 但经常打折</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/9/n14267004.md#1">中国金价大跌一克便宜70元 网路评论区沸腾</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/8/n14266834.md#1">女版陆片《战狼》翻车 预售票房仅4.6万元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/8/n14266828.md#1">杨颖遭软封杀9个月 两个迹象显示将获解封</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14266338.md#1">邓超孙俪俏皮发文 甜蜜庆祝两人结婚14周年</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/8/n14266847.md#1">席琳?迪翁曝罹罕病症状：唱歌时像被勒住喉咙</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/9/n14267043.md#1">张书伟办婚宴迎娶谢京颖 坤达传授人夫生存之道</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/6/1/n13750290.md#1">注意五个吃粽小技巧 窈窕过端午</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/6/n14265472.md#1">山林森呼吸 漫步林业遗迹桃园东眼山步道</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267387.md#1">粽子这样吃补蛋白质又补钙 还有1款粽子能刮油脂</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264865.md#1">冬病夏治更好！手脚冰冷、易感冒者现在快做1件事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264728.md#1">想让孩子的内心强大 父母千万别做这些事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284473.md#1">老僧预言他将大祸临头 权倾天下的他将如何选择？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286164.md#1">【未解之谜】最可信的穿越者 他在历史中留下了证据</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289654.md#1">【音乐】五月的希望</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285490.md#1">故宫耐震神技夸世 建筑秘诀藏在何处？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289728.md#1">【未解之谜】“目睹”三次文明毁灭 濒死中看到未来</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289636.md#1">【中国禁闻】揭油罐车黑幕 记者韩福涛据传失联</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290106.md#1">【时事军事】共军真要去欧洲打仗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289717.md#1">衡阳保卫战电影被禁 分析：中共抹杀历史</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289299.md#1">中国6月进出口数据现警讯 贸易冲突或加剧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289679.md#1">2024年美国生活最昂贵和最便宜的十个州</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290122.md#1">演唱会中途不停要喝水 刘德华身体状况引担忧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288874.md#1">胡歌首谈夫妻相处模式 大赞老婆付出很多</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289693.md#1">力压张若昀和胡歌 朱一龙获陆剧小生演技冠军</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290096.md#1">油管史上第一人 网红MrBeast频道订阅数破3亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289755.md#1">张艺兴演唱会上为母亲庆生 一口误引全场笑声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290376.md#1">美国癌症协会：4成癌症病例与生活习惯有关</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287768.md#1">物价上涨如何省钱？养成19个购物习惯超实用</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285229.md#1">研究：咖啡有助于抵消与年龄有关的肌肉流失</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281710.md#1">吸食大麻健康危害大 七招让你远离</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289225.md#1">观赏奥运要小心 看错比赛肚子恐怕会胖一圈</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/6/11/n14268208.htm">秦振国募款会谈服务/保护 获基层选民支持</a></p><hr>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/6/11/n14268208.htm">秦振国募款会谈服务/保护 获基层选民支持</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268208.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
